@@ -2,7 +2,6 @@
 
 - view input files   (pre-beta1)
 - delete input files (pre-beta1)
-- dubbele inputnaam! (pre-beta1)
 - input van URL      (pre-beta1)
 
 
